src/parser/test/parser-tests-gen/data/good/good-16.raml
#%RAML 1.0
title: Seed
version: v1
types:
  Seed1:
    properties:
      str1: string
      num1: number
  Seed2:
    properties:
      str2: string
      num2: number
  Seed3:
    properties:
      str3: string
      num3: number
  Seed41:
    type: Seed1
    properties:
      str4: string
      num4: number
  Type1:
    type: object|Seed3
    example: {}
  Type2:
    type: [Seed41,Seed2]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "str2": "str",
        "num2": 1,
        "type2_num_1": 1,
        "type2_bool_1": true
      }
    properties:
      type2_bool_1:
        type: boolean
      type2_num_1:
        type: number
  Type3:
    type: [Seed3]
    example: |
      {
        "str3": "str",
        "num3": 1,
        "type3_prop_2": {},
        "type3_prop_1": {}
      }
    properties:
      type3_prop_1:
        type: object
      type3_prop_2:
        type: object
  Type4:
    type: object
    example: |
      {
        "type4_prop_1": {},
        "type4_bool_1": true
      }
    properties:
      type4_bool_1:
        type: boolean
      type4_prop_1:
        type: ((boolean|string)|Type1)
  Type5:
    type: Seed41|Type4
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1
      }
  Type6:
    type: object|Type1
    example: {}
  Type7:
    type: object
    example: |
      {
        "type7_prop_1": {},
        "type7_num_1": 1
      }
    properties:
      type7_num_1:
        type: number
      type7_prop_1:
        type: object
  Type8:
    type: [Type6]
    example: {}
  Type9:
    type: object
    example: |
      {
        "type9_num_1": 1,
        "type9_prop_1": true
      }
    properties:
      type9_prop_1:
        type: boolean|((boolean|Seed41)|(number))
      type9_num_1:
        type: number
  Type10:
    type: [Type9,Type8]
    example: |
      {
        "type9_num_1": 1,
        "type9_prop_1": true
      }

/res1:
  post:
    body:
      application/json:
        type: Seed41
        example: |
          {
            "str1": "str",
            "num1": 1,
            "str4": "str",
            "num4": 1
          }
/res2:
  post:
    body:
      application/json:
        type: [Seed3]
        example: |
          {
            "str3": "str",
            "num3": 1
          }
/res3:
  post:
    body:
      application/json:
        type: Type6
        example: {}
/res4:
  post:
    body:
      application/json:
        type: [Seed3,Type2]
        example: |
          {
            "str3": "str",
            "num3": 1,
            "str1": "str",
            "num1": 1,
            "str4": "str",
            "num4": 1,
            "str2": "str",
            "num2": 1,
            "type2_bool_1": true,
            "type2_num_1": 1
          }
/res5:
  post:
    body:
      application/json:
        type: Seed1|object
        example: |
          {
            "str1": "str",
            "num1": 1
          }
