src/parser/test/parser-tests-gen/data/bad/bad-99.raml
#%RAML 1.0
title: Seed
version: v1
types:
  Seed1:
    properties:
      str1: string
      num1: number
  Seed2:
    properties:
      str2: string
      num2: number
  Seed3:
    properties:
      str3: string
      num3: number
  Seed41:
    type: Seed1
    properties:
      str4: string
      num4: number
  Type1:
    type: Seed3|Seed2
    example: |
      {
        "str3": "str",
        "num3": 1
      }
  Type2:
    type: [Seed41,Type1]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "str3": "str",
        "num3": 1
      }
  Type3:
    type: [Seed3]
    example: |
      {
        "str3": "str",
        "num3": 1,
        "type3_bool_1": true,
        "type3_prop_1": {}
      }
    properties:
      type3_prop_1:
        type: ((Seed3|number)|((boolean)))|Seed41
      type3_bool_1:
        type: boolean
  Type4:
    type: object|object
    example: {}
  Type5:
    type: object|object
    example: {}
  Type6:
    type: [Seed3,Seed41]
    example: |
      {
        "str3": "str",
        "num3": 1,
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type6_str_1": "str",
        "type6_prop_1": "str"
      }
    properties:
      type6_prop_1:
        type: Seed3
      type6_str_1:
        type: string
  Type7:
    type: [Type5,Seed2]
    example: |
      {
        "str2": "str",
        "num2": 1
      }
  Type8:
    type: [Type1]
    example: |
      {
        "str3": "str",
        "num3": 1
      }
  Type9:
    type: [Seed2,Type3]
    example: |
      {
        "str2": "str",
        "num2": 1,
        "str3": "str",
        "num3": 1,
        "type3_bool_1": true,
        "type3_prop_1": {},
        "type9_prop_1": {},
        "type9_num_1": 1
      }
    properties:
      type9_num_1:
        type: number
      type9_prop_1:
        type: object
  Type10:
    type: Type3
    example: |
      {
        "str3": "str",
        "num3": 1,
        "type3_bool_1": true,
        "type3_prop_1": {},
        "type10_bool_2": true,
        "type10_bool_1": true
      }
    properties:
      type10_bool_1:
        type: boolean
      type10_bool_2:
        type: boolean

/res1:
  post:
    body:
      application/json:
        type: [Type1]
        example: |
          {
            "str3": "str",
            "num3": 1
          }
/res2:
  post:
    body:
      application/json:
        type: object
        example: {}
/res3:
  post:
    body:
      application/json:
        type: [Type2]
        example: |
          {
            "str1": "str",
            "num1": 1,
            "str4": "str",
            "num4": 1
          }
/res4:
  post:
    body:
      application/json:
        type: object
        example: {}
/res5:
  post:
    body:
      application/json:
        type: Type2
        example: |
          {
            "str1": "str",
            "num1": 1,
            "str4": "str",
            "num4": 1
          }
